baml_language/crates/baml_tests/snapshots/compiles/test_old_and_new/baml_tests__compiles__test_old_and_new__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
function user.$init_test_28(registry: testing.TestCollector) -> ?  [expr] {
  { registry.register_test("new style", () -> void { { let result = "hello" } assert.not_null(result) }, null) } null
}
function user.Greet(name: string) -> string  [expr] {
  {  } "Hello, {name}!"
}
