baml_language/crates/baml_tests/snapshots/compiles/test_old_and_new/baml_tests__compiles__test_old_and_new__04_5_mir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===
fn user.$init_test_28(registry: testing.TestCollector) -> null {
    // Locals:
    let _0: null // _0 // return
    let _1: testing.TestCollector // registry // param
    let _2: void
    let _3: () -> void throws unknown

    bb0: {
        _3 = make_closure lambda[0]();
        _2 = call const fn testing.TestCollector.register_test(copy _1, const "new style", copy _3, const null) -> [bb1];
    }

    bb1: {
        _0 = const null;
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

// lambda[0]
fn .<lambda($init_test_28, 0)>() -> null {
    // Locals:
    let _0: null // _0 // return

    bb0: {
        _0 = call const fn assert.not_null(const null) -> [bb1];
    }

    bb1: {
        return;
    }
}

fn user.Greet(name: string) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: string // name // param

    bb0: {
        _0 = const "Hello, {name}!";
        goto -> bb1;
    }

    bb1: {
        return;
    }
}
