baml_language/crates/baml_tests/snapshots/compiles/test_old_and_new/baml_tests__compiles__test_old_and_new__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
function user.Greet(name: string) -> string throws never {
  { : "Hello, {name}!"
    "Hello, {name}!" : "Hello, {name}!"
  }
}
function user.$init_test_32(registry: testing.TestCollector) -> ? throws never {
  { : null
    registry.register_test("new style", () -> void { ... }, null) : void
      () -> void { ... } : () -> void throws unknown
        {
          let result = "hello"
          assert.not_null(result)
        }
    null : null
  }
}
lambda user.$init_test_32 {
}
