baml_language/crates/baml_tests/snapshots/compiles/test_old_and_new/baml_tests__compiles__test_old_and_new__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 19825
---
=== COMPILER2 DIAGNOSTICS ===
No errors found.
