baml_language/crates/baml_tests/snapshots/compiles/test_old_and_new/baml_tests__compiles__test_old_and_new__06_codegen.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function $init_test() -> null {
    load_var ?1
    call ?
    pop 1
    load_const ?
    return
}

function user.$init_test_28(registry: testing.TestCollector) -> null {
    load_var registry
    load_const "new style"
    make_closure .<lambda($init_test_28, 0)>, 0
    load_const null
    call testing.TestCollector.register_test
    pop 1
    load_const null
    return
}

function user.Greet(name: string) -> string {
    load_const "Hello, {name}!"
    return
}
